--- a/TrainingBE/appsettings.json
+++ b/TrainingBE/appsettings.json
@@ -8,5 +8,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "vPiIn0sgb6gvXidMR3tsnV0xQwAlUY41XA2I7U2W",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  },
+  "EmailService": {
+    "EmailHost": "smtp.gmail.com",
+    "EmailPort": 587,
+    "EmailUsername": "thezooec@gmail.com",
+    "EmailPassword": "htnawxzigbbevemg"
+  }
 }
